--- a/index.html
+++ b/index.html
@@ -14,22 +14,27 @@
 </html>
 
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-<a href="./public/movie-ranking.html">My top 2 most uesd websites</a>
+ <img src="./assets/images/movie-ranking.png" height="200px" /><br>
+
 
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
- <img src="./assets/images/movie-ranking.png" height="200px" />
+ 
 
 <!-- TODO 4: Add titles/subtitles etc. -->
 <h2>Best 2 websites </h2>
-<a href="./public/movie-ranking.html">Website ranking</a> 
-<h3>According to me </h3>
+<a href="./public/movie-ranking.html">My top 2 most uesd websites</a>
+<hr>
+
 
 <!-- TODO 5: Add a link to the project pages -->
+ <img src="./assets/images/birthday-invite.png" height="200px"/><br>
+
 <a href="./public/birthday-invite.html">Link to my birthday project</a>
 
 <!-- TODO 6: Add images to show the project previews
 HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-<img src="./assets/images/birthday-invite.png" height="200px"/>
+
 <!-- TODO 7: Add the Contact Me and About Me page links -->
+ <hr>
 <a href="./public/about.html">About me <br> <a href="./public/contact.html">contact me</a></a>
